--- a/oursponsors.html
+++ b/oursponsors.html
@@ -67,16 +67,16 @@
                 </section>
 			    
 			 
-			         <!-- Sponsors -->
-            <!--section class="wrapper style1" -->
-                <!--div class="container" -->
-                    <!--div class="row gtr-uniform" -->
-                        <!-- <div class="col-3"><span class="image fit"><img src="./images/ClydeGateway.png" alt=""></span></div -->
-                        <!--div class="col-3"><span class="image fit"><img src="./images/British_Geological_Survey.png" alt=""></span></div -->
-                        <!--div class="col-3"><span class="image fit"><img src="./images/Coat_of_arms_Glasgow.jpg" alt=""></span></div -->
+			         <-- Sponsors -->
+            <section class="wrapper style1">
+                <div class="container">
+                    <div class="row gtr-uniform">
+                        <div class="col-3"><span class="image fit"><img src="./images/ClydeGateway.png" alt=""></span></div>
+                        <div class="col-3"><span class="image fit"><img src="./images/British_Geological_Survey.png" alt=""></span></div>
+                        <div class="col-3"><span class="image fit"><img src="./images/Coat_of_arms_Glasgow.jpg" alt=""></span></div>
 
-                    <!--/div -->
-            <!--/section -->
+                    </div>
+            </section>
 			
 			
 		  <section class="wrapper style2">
