--- a/oursponsors.html
+++ b/oursponsors.html
@@ -74,7 +74,7 @@
 			    <h2>Supporters</h2>
                         <div class="col-3"><span class="image fit"><img src="./images/ClydeGateway.png" alt=""></span></div>
                         <div class="col-3"><span class="image fit"><img src="./images/British_Geological_Survey.png" alt=""></span></div>
-                        <div class="col-2"><img src="images/ThinkGeoEnergy.png" alt="egpd-logo" width="200"></div>
+                        <div class="col-2"><img src="images/Coat_of_arms_Glasgow.jpg" alt="egpd-logo" width="200"></div>
 
                     </div>
             </section>
