--- a/oursponsors.html
+++ b/oursponsors.html
@@ -53,7 +53,7 @@
                     <header class="major">	    
 		
 			    
-			<h2>Media Partner</h2>
+			<h2>Sponsors</h2>
 			      <p>We are grateful for the support of our sponsors, who will make this event possible and free for all European PhD students.</p>
 			    <img src="images/CGG.jpeg" alt="egpd-logo" width="500">
                        
