--- a/oursponsors.html
+++ b/oursponsors.html
@@ -70,9 +70,8 @@
                 <div class="container">
                     <div class="row gtr-uniform">
 			    <h2>Supporters</h2>
-                        <div class="col-4"><span class="image fit"><img src="./images/ClydeGateway.png" alt=""></span></div>
-                        <div class="col-4"><span class="image fit"><img src="./images/British_Geological_Survey.png" alt=""></span></div>
-                        <div class="col-2"><img src="images/Coat_of_arms_Glasgow.jpg" alt="egpd-logo" width="200">
+                        <div class="col-9"><span class="image fit"><img src="./images/Supporter_v1.PNG" alt=""></span></div>
+
 			    
 			    </div>
 			    
