--- a/oursponsors.html
+++ b/oursponsors.html
@@ -76,7 +76,7 @@
    
 			<h2>Media Partner</h2>
 			    
-			    <img src="images/ThinkGeoEnergy.png" alt="media" width="450">
+			    <img src="images/ThinkGeoEnergy.png" alt="" width="450">
                        
 			</header>
                    </div>
