--- a/oursponsors.html
+++ b/oursponsors.html
@@ -64,7 +64,7 @@
 =
 			  		 <span class="image featured"><img src="images/Supporter_v1.PNG" alt="" /></span>
 				     
-				<article>
+				</article>
 			</div>
                     </div>
             </section>
