--- a/oursponsors.html
+++ b/oursponsors.html
@@ -50,7 +50,8 @@
 		 <div class="container">                    
 			 <header class="major">	    					    			
 				 <h2>Sponsors</h2>			      			    
-				 <img src="images/CGG.jpeg" alt="" width="600">                       			
+				  
+				 <span class="image fit"><img src="./images/sponsors/CGG.jpeg" alt=""></span>
 		 </header>                
 		 </div>				
 	 </section>
@@ -60,7 +61,7 @@
                 <div class="container">
                     <header class="major">
                         <h2>Supporters</h2>
-			<img src="images/Supporter_v1.PNG" alt="" width="500">
+			<img src="images/Supporter_v1.PNG" alt="" width="800">
                             <h4>     </h4>
                     </header>
                 </div>
