--- a/oursponsors.html
+++ b/oursponsors.html
@@ -50,7 +50,7 @@
 		 <div class="container">                      
 			 <header class="major">	    					    			
 				 <h2>Sponsors</h2>			      			    
-				  <img src="images/Supporter_v1.PNG" alt="" width="500">
+				  <img src="images/CGG.jpeg" alt="" width="500">
 				
 		 </header>                
 		 </div>				
