--- a/sponsor.html
+++ b/sponsor.html
@@ -86,9 +86,9 @@
                                             <li> Coffee and Tea Breaks</li>
                                             <li> Lunch and Conference Dinner</li>
                                             <li> Food and Beverages for Social/Networking events</li>
-                                            <li> Travel to UKGEOS site visit </li>
+                                            <li> Travel to UKGEOS site </li>
 					    <li> Funding student travel</li>
-                                            <li> Price money for best poster/presentation</li>
+                                            <li> Prize money for best poster/presentation</li>
                                             
 										</article>
 
