--- a/oursponsors.html
+++ b/oursponsors.html
@@ -50,7 +50,9 @@
 		 <div class="container">                      
 			 <header class="major">	    					    			
 				 <h2>Sponsors</h2>			      			    
-				  <img src="images/CGG.jpeg" alt="" width="500">
+			<!--	  <img src="images/CGG.jpeg" alt="" width="500">    -->
+				 
+				 <img src="images/sponsors_v1.PNG" alt="" width="1000">
 				
 		 </header>                
 		 </div>				
