Replace CGG logo per sponsors_v1.png

--- a/oursponsors.html
+++ b/oursponsors.html
@@ -52,7 +52,7 @@
 				 <h2>Sponsors</h2>			      			    
 			<!--	  <img src="images/CGG.jpeg" alt="" width="500">    -->
 				 
-				 <img src="images/sponsors_v1.PNG" alt="" width="1000">
+				 <img src="images/sponsors_v1.png" alt="" width="1000">
 				
 		 </header>                
 		 </div>				
