--- a/index.html
+++ b/index.html
@@ -104,9 +104,10 @@
                                     <section>
                                         
                                         
-                                        <h3>SUBMISSIONS ARE NOW OPEN ! </h3>
-					<h3> Submit your abstract before the 5th February 2023. </h3>
-                                        <p> Attendance is free of charge</p>
+                                        <h3>SUBMISSIONS ARE NOW CLOSED ! </h3>
+					<!--<h3> Submit your abstract before the 5th February 2023. </h3>-->
+ 					<h3> If you have any questions, contact us at <a href="mailto: egpd2023@gmail.com"> egpd2023@gmail.com </a>. </h3>
+                                       <p> Attendance is free of charge</p>
                                         <footer>
                                             <a href="attend.html" class="button">Abstract Submission Guidelines</a>
                                         </footer>
