--- a/attend.html
+++ b/attend.html
@@ -112,7 +112,8 @@
 
                                 <section>
                                     
-                                    <h3> Submit your abstract before the 5th February 2023. </h3>
+                                  <!--    <h3> Submit your abstract before the 5th February 2023. </h3> -->
+					 <h3>  Abstract submissions are closed. Informations on registration coming soon </h3>
                                     <footer>
                                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdflROcU2J3kTstpxzEkYcYxCr8vfR3Kv_aDD778Q-1WAEH5w/viewform?usp=sf_link" target="_blank" class="button">Abstract Submission</a>
 				        
