--- a/oursponsors.html
+++ b/oursponsors.html
@@ -63,7 +63,7 @@
                 <div class="container">
                     <header class="major">
                         <h2>Supporters</h2>
-			<img src="images/Supporter_v1.PNG" alt="" width="1000">
+			<img src="images/SupportersV2.PNG" alt="" width="1000">
                           
                     </header>
                 </div>
