--- a/oursponsors.html
+++ b/oursponsors.html
@@ -71,15 +71,39 @@
             </section>
             
 			
-			<section class="wrapper style2">                   
-				<div class="container">                       
-				<header class="major">	       			
-				<h2>Media Partner</h2>			    			    
-					<img src="images/ThinkGeoEnergy.png" alt="" width="450">                       			
-					</header>                   
-				</div>                 
+			
+			
+			
+<section class="wrapper style1">
+                <div class="container">
+                    <div class="row gtr-200">
+                        <div class="col-8 col-12-narrower">
+                            <div id="content">
+
+                                <!-- Content -->
+
+
+					    
+					    <span class="image featured"><img src="images/images/ThinkGeoEnergy.png" alt="" /></span>
+			
+			
+
+                            </div>
+                        </div>
+		 </div>
+             </div>		
 			</section>
-	
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+
 		
 		<!-- Banner -->
 				<section id="banner">
