--- a/oursponsors.html
+++ b/oursponsors.html
@@ -84,7 +84,7 @@
 
 
 					    
-					    <span class="image featured"><img src="images/images/ThinkGeoEnergy.png" alt="" /></span>
+					    <span class="image featured"><img src="images/ThinkGeoEnergy.png" alt="" /></span>
 			
 			
 
