--- a/oursponsors.html
+++ b/oursponsors.html
@@ -81,8 +81,9 @@
                             <div id="content">
 
                                 <!-- Content -->
-
-
+					<header>
+                                            <h2>Media Partner</h2>
+					</header>
 					    
 					    <span class="image featured"><img src="images/ThinkGeoEnergy.png" alt="" /></span>
 			
