--- a/oursponsors.html
+++ b/oursponsors.html
@@ -61,7 +61,7 @@
                                             <h2>Sponsors</h2>
 					</header>
 					    
-					    <span class="image featured"><img src="images/SponsorsNew.PNG" alt="" /></span>
+					    <span class="image featured"><img src="images/SponsorsV3.PNG" alt="" /></span>
 			
 			
 
