--- a/schedule.html
+++ b/schedule.html
@@ -57,8 +57,10 @@
                                 <article>
                                     <header>
                                         <h2>EGPD 2023 Schedule </h2>
-		                       <span class="image featured"><img src="images/Provisional Itinerary.PNG" alt="" /></span>
-		             		 <h3> Below is a provisional itinerary for the event. A more detailed schedule of the presentations will be given closer to the conference date.</h3>
+		                       <span class="image featured"><img src="images/Day1-Talks.PNG" alt="" /></span>
+					    <span class="image featured"><img src="images/Day2-Talks.PNG" alt="" /></span>
+					    <span class="image featured"><img src="images/Day3.PNG" alt="" /></span>
+		             		 
                   
                                     </header>
 
