--- a/schedule.html
+++ b/schedule.html
@@ -57,7 +57,7 @@
                                 <article>
                                     <header>
                                         <h2>EGPD 2023 Schedule </h2>
-		                       <span class="image featured"><img src="images/Day1-Talks.PNG" alt="" /></span>
+		                       <span class="image featured"><img src="images/Day1Talks.PNG" alt="" /></span>
 					    <span class="image featured"><img src="images/Day1-Posters.PNG" alt="" /></span>
 					    <span class="image featured"><img src="images/Day2-Talks.PNG" alt="" /></span>
 					    <span class="image featured"><img src="images/Day2-Posters.PNG" alt="" /></span>
