--- a/schedule.html
+++ b/schedule.html
@@ -60,7 +60,7 @@
 		                       <span class="image featured"><img src="images/Day1Talks.PNG" alt="" /></span>
 					    <span class="image featured"><img src="images/Day1-Posters.PNG" alt="" /></span>
 					    <span class="image featured"><img src="images/Day2-Talks.PNG" alt="" /></span>
-					    <span class="image featured"><img src="images/Day2-Posters.PNG" alt="" /></span>
+					    <span class="image featured"><img src="images/Day2Posters.PNG" alt="" /></span>
 					    <span class="image featured"><img src="images/Day3.PNG" alt="" /></span>
 		             		 
                   
