--- a/schedule.html
+++ b/schedule.html
@@ -28,6 +28,10 @@
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="attend.html">Abstract Submission</a></li>
                                 <li class="current"><a href="schedule.html">Schedule</a></li>
+				     <ul>
+                                        <li><a href="schedule.html">Conference Programme</a></li>
+                                        <li><a href="keynotes.html">Keynote Speakers</a></li>
+                                    </ul>
                                 <li><a href="oursponsors.html">Sponsors</a>
                                     <ul>
                                         <li><a href="oursponsors.html">Our sponsors</a></li>
