--- a/schedule.html
+++ b/schedule.html
@@ -27,7 +27,7 @@
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="attend.html">Abstract Submission</a></li>
-                                <li class="current"><a href="schedule.html">Schedule</a></li>
+                                <li><a href="schedule.html">Schedule</a></li>
 				     <ul>
                                         <li><a href="schedule.html">Conference Programme</a></li>
                                         <li><a href="keynotes.html">Keynote Speakers</a></li>
