--- a/schedule.html
+++ b/schedule.html
@@ -94,7 +94,7 @@
                             
                             <section class="col-8 col-12-narrower">
                                 <div class="box post">
-                                    <a href="#" class="image left"><img src="images/comittee/NeilBurnside.jpg" alt="" /></a>
+                                    <a href="#" class="image left"><img src="images/NeilBurnside.jpg" alt="" /></a>
                                     <div class="inner">
                                         <h3>Neil Burnside</h3>
                                         <p> Dr Neil Burnside is a Chancellor’s Fellow in Geoenergy at the University of Strathclyde. His research mainly focuses on sustainable energy development and environmental resilience. He has led UKRI and EU H2020 funded work on several geoscience and energy related topics including: assessment of hot dry rock, hot sedimentary aquifer, and active volcanic geothermal resources for delivery of low-carbon heat and power; advancing environmental monitoring protocols for geoenergy extraction and mining activities; water resource management in stressed environments; citizen science for socioenvironmental impact assessment; optimisation and integration of renewable heat resources into district heating networks. He leads geothermal research activities at Strathclyde and his team is currently working on appraisal of UK mine water resources, improving deep geothermal assessment, advancing thermal energy storage, and transition of hydrocarbon rich regions to Net Zero societies. </p>
