--- a/keynotes.html
+++ b/keynotes.html
@@ -90,6 +90,16 @@
 
 					  </div>
                       		  </div> 
+					
+					<div class="box post">
+                                    <a href="#" class="image left"><img src="images/Apostolos.jpg" alt="" /></a>
+                                    <div class="inner">
+                                        <h3>Dr. Apostolos Michopoulos</h3>
+					    <p> Dr. Apostolos Michopoulos is Senior Researcher and Deputy Director at Energy & Environmental Design of Buildings Research Lab. at University of Cyprus. He holds a Diploma and a PhD in Mechanical Engineering from the Aristotle University of Thessaloniki, Greece, and a MSc in Project Management. His research focuses on energy, environmental and technoeconomic analysis, energy efficiency, and implementation of RES technologies in building and industrial sector. He has University-level teaching experience in heat transfer, RES technologies and energy management. He participated in more than 40 research projects and the outcome of his research includes in more than 85 publications in book chapters, journals and conference proceedings.</p>
+					    <p>Host Institution: Riga Technical University</p>
+
+					  </div>
+                      		  </div> 
 
                                 </article>
 
