--- a/about.html
+++ b/about.html
@@ -28,11 +28,11 @@
 								<li><a href="index.html">Home</a></li>
 								<li class="current"><a href="about.html">About</a></li>
 								<li><a href="attend.html">Abstract Submission</a></li>
-								<li><a href="schedule.html">Schedule</a></li>
+								<li><a href="schedule.html">Schedule</a>
 								 <ul>
                                        					 <li><a href="schedule.html">Conference Programme</a></li>
                                       					  <li><a href="keynotes.html">Keynote Speakers</a></li>
-                                    				 </ul>
+                                    				 </ul></li>
                                 				<li><a href="oursponsors.html">Sponsors</a>
                                     				<ul>
                                     				    <li><a href="oursponsors.html">Our sponsors</a></li>
