--- a/attend.html
+++ b/attend.html
@@ -27,7 +27,11 @@
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About</a></li>
                                 <li class="current"><a href="attend.html">Abstract Submission</a></li>
-                                <li><a href="schedule.html">Schedule</a></li>
+                                <li><a href="schedule.html">Schedule</a>
+					<ul>
+                                       		<li><a href="schedule.html">Conference Programme</a></li>
+                                      	       <li><a href="keynotes.html">Keynote Speakers</a></li>
+                                    	</ul></li>
                                 <li><a href="oursponsors.html">Sponsors</a>
                                     <ul>
                                         <li><a href="oursponsors.html">Our sponsors</a></li>
