--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
 								<li class="current"><a href="index.html">Home</a></li>
 								<li><a href="about.html">About</a></li>
 								<li><a href="attend.html">Abstract Submission</a></li>
-								<li><a href="schedule.html">Schedule</a></li>
+								<li><a href="schedule.html">Schedule</a>
+								 <ul>
+                                       					 <li><a href="schedule.html">Conference Programme</a></li>
+                                      					  <li><a href="keynotes.html">Keynote Speakers</a></li>
+                                    				 </ul></li>
+								
                                 <li><a href="oursponsors.html">Sponsors</a>
                                     <ul>
                                         <li><a href="oursponsors.html">Our sponsors</a></li>
