--- a/about.html
+++ b/about.html
@@ -267,7 +267,7 @@
                                 <div class="box post">
                                     <a href="#" class="image left"><img src="images/comittee/Aislinn.jpg" alt="" /></a>
                                     <div class="inner">
-                                        <h3>Aislinn</h3>
+                                        <h3>Aislinn Williams</h3>
                                         <p> Characterising Upper Devonian sandstones within the Clackmannan Syncline as a low enthalpy geothermal resource through sedimentary, hydrogeological, structural, and thermal assessments.</p>
 					    
 					<p>Host Institution: University of Glasgow</p>
