--- a/sponsor.html
+++ b/sponsor.html
@@ -29,7 +29,7 @@
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="attend.html">Abstract Submission</a></li>
                                 <li><a href="schedule.html">Schedule</a></li>
-                                <li><a href="oursponsors.html">Sponsors</a>
+                                <li class = "current"><a href="oursponsors.html">Sponsors</a>
                                     <ul>
                                         <li><a href="oursponsors.html">Our sponsors</a></li>
                                         <li><a href="sponsor.html">Sponsor opportunities</a></li>
