--- a/schedule.html
+++ b/schedule.html
@@ -63,7 +63,7 @@
                                         <h2>EGPD 2023 Schedule </h2>
 		                       <span class="image featured"><img src="images/Day1Talks.PNG" alt="" /></span>
 					    <span class="image featured"><img src="images/Day1-Posters.PNG" alt="" /></span>
-					    <span class="image featured"><img src="images/Day2-Talks.PNG" alt="" /></span>
+					    <span class="image featured"><img src="images/Day2Talk-21March.PNG" alt="" /></span>
 					    <span class="image featured"><img src="images/Day2Posters.PNG" alt="" /></span>
 					    <span class="image featured"><img src="images/Day3.PNG" alt="" /></span>
 		             		 
