--- a/keynotes.html
+++ b/keynotes.html
@@ -61,7 +61,7 @@
                                 <!-- Content -->
                                 <article>
                                     <header>
-                                        <h2>EGPD 2023 Keynotes</h2>
+                                        <h2>EGPD 2023 Keynote Speakers</h2>
 
 		             		 
                   
