--- a/keynotes.html
+++ b/keynotes.html
@@ -100,6 +100,17 @@
 
 					  </div>
                       		  </div> 
+					
+					
+					<div class="box post">
+                                    <a href="#" class="image left"><img src="images/Zajacs.jpg" alt="" /></a>
+                                    <div class="inner">
+                                        <h3>Dr.sc.ing. Aleksandrs Zajacs </h3>
+					    <p> Dr.sc.ing. Aleksandrs Zajacs holds a position of associate professor at Riga Technical University. Research interests are related to the assessment of development scenarios of district heating systems combining renewable and fossil energy sources in the most efficient way as well as energy efficiency measures in district heating and housing sector. Has a 10 year of experience in district heating company JSC “Rigas Siltums”, which is the largest DH company in the Baltic States.</p>
+					    <p>Host Institution: Riga Technical University</p>
+
+					  </div>
+                      		  </div> 
 
                                 </article>
 
