--- a/oursponsors.html
+++ b/oursponsors.html
@@ -65,7 +65,7 @@
                                             <h2>Sponsors</h2>
 					</header>
 					    
-					    <span class="image featured"><img src="images/Sponsors (23-03-2023).PNG" alt="" /></span>
+					    <span class="image featured"><img src="images/Sponsors_Final.PNG" alt="" /></span>
 			
 			
 
