--- a/keynotes.html
+++ b/keynotes.html
@@ -116,7 +116,7 @@
 					
 					
 					<div class="box post">
-                                    <a href="#" class="image left"><img src="images/Zajacs.jpg" alt="" /></a>
+                                    <a href="#" class="image left"><img src="images/Maja Turnsek.jpg" alt="" /></a>
                                     <div class="inner">
                                         <h3>Dr.  </h3>
 					    <p> Maja Turnsek, PhD is Associate Professor & Vice Dean for Research at University of Maribor, Faculty of Tourism, Slovenia. Her research interests cover storytelling, humour and climate change and communication in tourism. She gained her PhD in media and communication studies at the University of Ljubljana. Her PhD was on the need of transnational deliberation in the face of climate change as a global public issue. She lectures on communication, psychology and marketing in tourism and food production. In the past, she was one of the researchers involved in the Geothermica funded project GeoFood, focusing on the interconnection of food production, tourism and geothermal energy.  Currently, she leads the research project Climate change and sustainable tourism in Slovenia and is actively involved in local initiatives with regards to climate change, especially in relation to geothermal energy. </p>
