--- a/keynotes.html
+++ b/keynotes.html
@@ -92,6 +92,16 @@
                       		  </div> 
 					
 					<div class="box post">
+                                    <a href="#" class="image left"><img src="images/LucyCotton.jpg" alt="" /></a>
+                                    <div class="inner">
+                                        <h3>Lucy Cotton  </h3>
+					    <p>Lucy is a geologist based in Cornwall and is the Geothermal Group Manager for GeoScience Limited. She was the Lead Site Geologist during the drilling of both deep geothermal projects in the UK - the United Downs Deep Geothermal Power project and most recently, Eden Geothermal. Currently, Lucy is focused on assessing the “size of the prize” for mine water geothermal, specifically from abandoned Cornish tin mines and is leading a team to establish the viability of using mine water geothermal from Geevor, Levant and Botallack, for space heating on the tin coast. Lucy is passionate about establishing a diverse and inclusive geothermal industry in the UK and, in her role as UK WING Ambassador (Women in Geothermal) is keen to encourage more women and girls to pursue a career in the geothermal sector through outreach and education. </p>
+					    <p>Host Institution: GeoScience Limited, Eden Geothermal and Women in Geothermal</p>
+
+					  </div>
+                      		  </div> 
+					
+					<div class="box post">
                                     <a href="#" class="image left"><img src="images/Apostolos.jpg" alt="" /></a>
                                     <div class="inner">
                                         <h3>Dr. Apostolos Michopoulos</h3>
