--- a/schedule.html
+++ b/schedule.html
@@ -61,10 +61,10 @@
                                 <article>
                                     <header>
                                         <h2>EGPD 2023 Schedule </h2>
-		                       <span class="image featured"><img src="images/Day1Talks(27-03).PNG" alt="" /></span>
-					    <span class="image featured"><img src="images/Day1-Posters.PNG" alt="" /></span>
-					    <span class="image featured"><img src="images/Day2Talk-21March.PNG" alt="" /></span>
-					    <span class="image featured"><img src="images/Day2Posters.PNG" alt="" /></span>
+		                       <span class="image featured"><img src="images/Day1Talks(29-03).PNG" alt="" /></span>
+					    <span class="image featured"><img src="images/Day1Posters(29-03).PNG" alt="" /></span>
+					    <span class="image featured"><img src="images/Day2Talks(29-03).PNG" alt="" /></span>
+					    <span class="image featured"><img src="images/Day1Posters(29-03).PNG" alt="" /></span>
 					    <span class="image featured"><img src="images/Day3.PNG" alt="" /></span>
 		             		 
                   
