--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>The schedule of the #EGPD2023 Glasgow will come soon</em></h2>
-						<a href="schedule.html" class="button">EGPD's Schedule</a>
+						<h2>Read the EGPD 2023 Post-event Summary Report here:</em></h2>
+						<a href="schedule.html" class="button">Summary Report</a>
 					</header>
 				</section>
                 
