--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>Read the EGPD 2023 Post-event Summary Report here:</em></h2>
+						<h2>Read the #EGPD2023 Post-event Summary Report here:</em></h2>
 						<a href="https://drive.google.com/file/d/19z95A2cTwTYYEIr8Q2mAeGt-fbApeIBV/view?usp=drive_link" class="button">Summary Report</a>
 					</header>
 				</section>
