--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<section id="banner">
 					<header>
 						<h2>Read the #EGPD2023 Post-event Summary Report here:</em></h2>
-						<a href="https://drive.google.com/file/d/19z95A2cTwTYYEIr8Q2mAeGt-fbApeIBV/view?usp=drive_link" class="button">Summary Report</a>
+						<a href="images/EGPD 2023 Post-Event Summary.pdf" class="button">Summary Report</a>
 					</header>
 				</section>
                 
